Fixed Background on Firefox v0.1

--- a/style.css
+++ b/style.css
@@ -12,37 +12,35 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
-  width: 100%;
-  height: 100%;
   background-color: #f1e7d1;
-  display: flex;
-  flex-direction: column;
-  padding: 8px 8px 0 8px;
   color: #282727;
   font-family: 'MADE Likes Slab';
   font-weight: 100;
-  overflow-x: hidden;
-  position: relative;
 }
 
-body::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
+main {
   background-image: url('./assets/bgNO.webp');
   background-position: center top;
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  padding: 8px 8px 0 8px;
+  overflow-x: hidden;
+}
+
+/* body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: -1;
   opacity: 0.9;
-}
+} */
 
 /* .loader {
   display: none;
@@ -59,6 +57,7 @@ body::before {
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  overflow: hidden;
 }
 
 body .loader img {
